--- a/Collect/index.html
+++ b/Collect/index.html
@@ -22,11 +22,13 @@
       <br/>
 	    우선 친구 지도 프로젝트에 관심을 가지고 참여해주셔서 감사드립니다.
 	    <br/>
-      본 프로젝트는 이름처럼 친구 지도를 그리는 것을 목표로 하고 있습니다.
+      본 프로젝트는 이름처럼 사람들의 친구 네트워크를 조사하는 것을 목표로 하고 있습니다.
+      <br />
+      진행 기간은 2021년 5월 2일 22:00부터 2021년 5월 9일 22:00입니다.
       <br/>
       이 지도는 <span style='color:rgb(18, 112, 122)'>'대학'</span>을 기준으로 그려질 예정입니다.
       <br/>
-      여러분이 입력하신 대학 정보와 어떤 링크를 통해서 (다시 말해 어떤 대학을 다니는 사람을 통해서) 이 설문에 참여하게 되었는지만을 수집합니다.
+      여러분이 입력하신 대학 정보와 어떤 링크를 통해서 이 설문에 참여하게 되었는지만을 수집합니다.
       <br/>
       이외의 정보는 수집되지 않습니다.
       <br/>
@@ -36,7 +38,9 @@
       <br/>
       '친구'는 꼭 동일한 연령대일 필요가 없으며 여러분이 '친구'라는 말을 들었을 때에 처음 생각나는 두 사람으로 선정해주세요.
       <hr \>
-      본인이 소속된 국문으로 <span style='color:rgb(18, 112, 122)'>대학명</span>을 입력해주세요.
+      본인이 소속된 <span style='color:rgb(18, 112, 122)'>대학명</span>을 국문으로 입력해주세요.
+      <br \>
+      예. 한국과학기술원 (O), KAIST (X), 카이스트 (X)
       <br \>
       없으신 경우, '기타'라고 입력해주시기를 바랍니다.
       <br \>
@@ -47,13 +51,18 @@
       <hr \>
       다음 내용을 복사하여 떠올렸던 <span style='color:rgb(18, 112, 122)'>2명의 친구에게 전달</span>해주세요!
       <br \>
+      만약 이 설문을 받은 일시가 <span style='color:rgb(18, 112, 122)'>2021년 5월 9일 22:00 이후면 전달하지 말아주세요.</span>
+      <br \>
       <textarea id="content"></textarea>
       <button id="copy">복사</button>
       <hr \>
       문의는 다음 카카오톡 오픈 채팅으로 해 주시길를 바랍니다.
       <br \>
       <a href = "https://open.kakao.com/o/sSWJqZad">오픈 채팅 링크</a>
-
+      <hr \>
+      완성된 친구 지도는 동일한 링크를 통해서 2021년 5월 12일 이후에 공개될 예정입니다.
+      <br \>
+      참여 감사합니다.
 	</div>
   </body>
 </html>
