--- a/Result/index.html
+++ b/Result/index.html
@@ -27,8 +27,9 @@
         <br />
         참여한 사람이 5명 이하라 개인을 특정할 수 있는 데이터는 제외하였습니다.
         <br />
-        참여해주신 여러분 감사합니다.
+        본 사이트 사용 방법은 다음 데모 영상을 참고해 주시기를 바랍니다.
         <br />
+        <img src = "./demo.gif" style='border: solid;'/>
         프로젝트에 사용한 코드를 github을 통해서 공개합니다.
         <br />
         <a href = "https://github.com/Nayoung-Oh/FrienndsMapProject">github 링크</a>
