--- a/Result/index.html
+++ b/Result/index.html
@@ -29,7 +29,7 @@
         <br />
         본 사이트 사용 방법은 다음 데모 영상을 참고해 주시기를 바랍니다.
         <br />
-        <img src = "./demo.gif" style='border: solid;'/>
+        <img src = "./demo.gif" style='width: 500px;border: solid;'/>
         프로젝트에 사용한 코드를 github을 통해서 공개합니다.
         <br />
         <a href = "https://github.com/Nayoung-Oh/FrienndsMapProject">github 링크</a>
@@ -40,17 +40,19 @@
         <br />
         <a href = "https://open.kakao.com/o/sSWJqZad">오픈 채팅 링크</a>
         <br />
-        <div id='map' style='width: 400px; height: 300px;'></div>
-        <label for="person">사람을 선택해주세요</label>
+        <div id='map' style='width: 500px; height: 300px;'></div>
+        <label for="person">보고자 하는 데이터를 선택해주세요</label>
         <select id=person>
-          <option value="just" selected>--사람을 선택해주세요--</option>
-          <option value="P1">P1</option>
-          <option value="P2">P2</option>
-          <option value="P3">P3</option>
-          <option value="P4">P4</option>
-          <option value="P5">P5</option>
-          <option value="P6">P6</option>
-          <option value="P7">P7</option>
+          <option value="just" selected>--보고자 하는 데이터를 선택해주세요--</option>
+          <option value="P1">P1_친구지도</option>
+          <option value="P2">P2_친구지도</option>
+          <option value="P3">P3_친구지도</option>
+          <option value="P4">P4_친구지도</option>
+          <option value="P5">P5_친구지도</option>
+          <option value="P6">P6_친구지도</option>
+          <option value="P7">P7_친구지도</option>
+          <option value="KAIST_prev">KAIST인 이전 친구</option>
+          <option value="KAIST_next">KAIST인 다음 친구</option>
         </select>
       </div>
       
